// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LookupSpreadsheetOptions renders with variable inputs 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="my-2"
    >
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.spreadsheetId"
        >
          spreadsheetId
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <div
                class="input-group"
              >
                <input
                  class="form-control"
                  disabled=""
                  type="text"
                  value="Test Sheet"
                />
                <div
                  class="input-group-append"
                >
                  <button
                    class="btn btn-info"
                    type="button"
                  >
                    Select
                  </button>
                </div>
              </div>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Sheet"
              data-testid="toggle-config.spreadsheetId"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-file-alt fa-w-12 fa-fw "
                    data-icon="file-alt"
                    data-prefix="far"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M288 248v28c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-28c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm-12 72H108c-6.6 0-12 5.4-12 12v28c0 6.6 5.4 12 12 12h168c6.6 0 12-5.4 12-12v-28c0-6.6-5.4-12-12-12zm108-188.1V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V48C0 21.5 21.5 0 48 0h204.1C264.8 0 277 5.1 286 14.1L369.9 98c9 8.9 14.1 21.2 14.1 33.9zm-128-80V128h76.1L256 51.9zM336 464V176H232c-13.3 0-24-10.7-24-24V48H48v416h288z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              Select a Google Sheet. The first row in your sheet MUST contain headings.
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.tabName"
        >
          Tab Name
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <textarea
                class="form-control"
                id="config.tabName"
                name="config.tabName"
                rows="1"
              >
                @myTab
              </textarea>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Variable"
              data-testid="toggle-config.tabName"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              The spreadsheet tab
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.header"
        >
          Column Header
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <textarea
                class="form-control"
                id="config.header"
                name="config.header"
                rows="1"
              >
                @myHeader
              </textarea>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Variable"
              data-testid="toggle-config.header"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.query"
        >
          Query
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <textarea
                class="form-control"
                id="config.query"
                name="config.query"
                rows="1"
              >
                @query
              </textarea>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Variable"
              data-testid="toggle-config.query"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              Value to search for in the column
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.multi"
        >
          All Matches
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <div
                class="switch btn on btn-primary"
              >
                <div
                  class="switch-group"
                >
                  <span
                    class="switch-on btn btn-primary"
                  >
                     
                  </span>
                  <span
                    class="switch-off btn btn-light"
                  >
                     
                  </span>
                  <span
                    class="switch-handle btn btn-light"
                  />
                </div>
              </div>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Toggle"
              data-testid="toggle-config.multi"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              Toggle on to return an array of matches
            </span>
          </small>
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`LookupSpreadsheetOptions should render successfully 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="my-2"
    >
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.spreadsheetId"
        >
          spreadsheetId
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <div
                class="input-group"
              >
                <input
                  class="form-control"
                  disabled=""
                  type="text"
                  value="Test Sheet"
                />
                <div
                  class="input-group-append"
                >
                  <button
                    class="btn btn-info"
                    type="button"
                  >
                    Select
                  </button>
                </div>
              </div>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Sheet"
              data-testid="toggle-config.spreadsheetId"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-file-alt fa-w-12 fa-fw "
                    data-icon="file-alt"
                    data-prefix="far"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M288 248v28c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-28c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm-12 72H108c-6.6 0-12 5.4-12 12v28c0 6.6 5.4 12 12 12h168c6.6 0 12-5.4 12-12v-28c0-6.6-5.4-12-12-12zm108-188.1V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V48C0 21.5 21.5 0 48 0h204.1C264.8 0 277 5.1 286 14.1L369.9 98c9 8.9 14.1 21.2 14.1 33.9zm-128-80V128h76.1L256 51.9zM336 464V176H232c-13.3 0-24-10.7-24-24V48H48v416h288z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              Select a Google Sheet. The first row in your sheet MUST contain headings.
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.tabName"
        >
          Tab Name
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-1s2u09g-control"
                >
                  <div
                    class=" css-319lph-ValueContainer"
                  >
                    <div
                      class=" css-qc6sy-singleValue"
                    >
                      Tab1
                    </div>
                    <div
                      class=" css-6j8wv5-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="config.tabName"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                        />
                      </svg>
                    </div>
                    <span
                      class=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Select..."
              data-testid="toggle-config.tabName"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              The spreadsheet tab
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.header"
        >
          Column Header
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-3-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-1s2u09g-control"
                >
                  <div
                    class=" css-319lph-ValueContainer"
                  >
                    <div
                      class=" css-qc6sy-singleValue"
                    >
                      Column1
                    </div>
                    <div
                      class=" css-6j8wv5-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="config.header"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                        />
                      </svg>
                    </div>
                    <span
                      class=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Select..."
              data-testid="toggle-config.header"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.query"
        >
          Query
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <textarea
                class="form-control"
                id="config.query"
                name="config.query"
                rows="1"
              />
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Text"
              data-testid="toggle-config.query"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              Value to search for in the column
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group row"
      >
        <label
          class="label form-label col-form-label col-xl-2 col-lg-3"
          for="config.multi"
        >
          All Matches
        </label>
        <div
          class="col-xl-10 col-lg-9"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <div
                class="switch btn off btn-light"
              >
                <div
                  class="switch-group"
                >
                  <span
                    class="switch-on btn btn-primary"
                  >
                     
                  </span>
                  <span
                    class="switch-off btn btn-light"
                  >
                     
                  </span>
                  <span
                    class="switch-handle btn btn-light"
                  />
                </div>
              </div>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Toggle"
              data-testid="toggle-config.multi"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              Toggle on to return an array of matches
            </span>
          </small>
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
